# rust-plague

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  run_example
examples/: cmp.rs
src/: lib.rs
tests/: compile-test.rs  test.rs
tests/compile-fail/: arity-1.rs  arity-2.rs  empty.rs  eof.rs  unknown-fn.rs
