[package]
authors = ["mcarton <cartonmartin+git@gmail.com>"]
description = "Parametrized tests tools"
license = "MIT"
name = "plague"
keywords = ["parametrized", "test"]
repository = "https://github.com/mcarton/rust-plague"
version = "0.6.3"

[lib]
name = "plague"
plugin = true

[dev-dependencies]
compiletest_rs = "0.2.0"
